# rust_rest_api

./: .gitignore  Cargo.toml  db.json  package-lock.json  package.json
migrations/2020-02-16-083234_users/: up.sql
src/: main.rs  schema.rs
src/Controllers/: mainController.rs
src/controllers/: base.rs  controller_base.rs  mod.rs  test.rs  test_controller.rs
src/models/: user.rs
src/utils/: mod.rs
