[package]
name = "rust_webapi"
version = "0.1.0"
authors = ["tushwintz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.2"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.46"
log = "^0.4.8"